--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,11 @@
   },
   "homepage": "https://github.com/vishaldonga/mern-learn#readme",
   "dependencies": {
-    "express": "^4.17.1"
+    "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.5",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.13.2"
   }
 }
